plugins {
    alias(libs.plugins.android.application)
}

android {
    namespace 'com.example.justfly'
    compileSdk 34

    defaultConfig {
        applicationId "com.example.justfly"
        minSdk 30
        targetSdk 34
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    testOptions {
        unitTests.all {
            useJUnitPlatform()
        }
    }
}

dependencies {

    implementation libs.appcompat
    implementation libs.material
    implementation libs.activity
    implementation libs.constraintlayout
    implementation libs.osmdroid.android
    testImplementation libs.junit.jupiter
    testImplementation platform(libs.junit.bom)
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core
}